--- a/index.html
+++ b/index.html
@@ -3,49 +3,52 @@
 <head>
     <link rel="stylesheet" href="./css/mdui.css">
     <link rel="stylesheet" href="./css/jquery.fullpage.css">
+    <script src="./js/mdui.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HomePage - Banson</title>
 </head>
 
 
 
-<body>
-    <div class="mdui-card">
-
-        <!-- 卡片头部，包含头像、标题、副标题 -->
-        <div class="mdui-card-header">
-        <!--     <img class="mdui-card-header-avatar" src="avatar.jpg" /> -->
-            <div class="mdui-card-header-title">Title</div>
-            <div class="mdui-card-header-subtitle">Subtitle</div>
-        </div>
-
-        <!-- 卡片的媒体内容，可以包含图片、视频等媒体内容，以及标题、副标题 -->
-        <div class="mdui-card-media">
-            <!-- <img src="card.jpg" /> -->
-
-            <!-- 卡片中可以包含一个或多个菜单按钮 -->
-            <div class="mdui-card-menu">
-                <button class="mdui-btn mdui-btn-icon mdui-text-color-white"><i
-                        class="mdui-icon material-icons">share</i></button>
-            </div>
-        </div>
-
-        <!-- 卡片的标题和副标题 -->
-        <div class="mdui-card-primary">
-            <div class="mdui-card-primary-title">Title</div>
-            <div class="mdui-card-primary-subtitle">Subtitle</div>
-        </div>
-
-        <!-- 卡片的内容 -->
-        <div class="mdui-card-content">子曰：「学而时习之，不亦说乎？有朋自远方来，不亦乐乎？人不知，而不愠，不亦君子乎？」</div>
-
-        <!-- 卡片的按钮 -->
-        <div class="mdui-card-actions">
-            <button class="mdui-btn mdui-ripple">action 1</button>
-            <button class="mdui-btn mdui-ripple">action 2</button>
-            <button class="mdui-btn mdui-btn-icon mdui-float-right"><i
-                    class="mdui-icon material-icons">expand_more</i></button>
+<body
+    class="mdui-theme-primary-red mdui-theme-accent-blue-accent mdui-m-l-3 mdui-m-r-3 mdui-appbar-with-toolbar mdui-drawer-body-left mdui-theme-layout-dark">
+    <!-- mdui-theme-layout-dark-->
+    <div class="mdui-appbar mdui-appbar-fixed">
+        <div class="mdui-toolbar mdui-color-theme">
+            <a href="javascript:;" class="mdui-btn mdui-btn-icon" mdui-drawer="{target: '#left-drawer'}">
+                <i class="mdui-icon material-icons">menu</i>
+            </a>
+            <a href="javascript:;" class="mdui-typo-title">HomePage</a>
+            <div class="mdui-toolbar-spacer"></div>
+            <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">search</i></a>
+            <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
+            <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">more_vert</i></a>
         </div>
 
     </div>
+
+    <div class="mdui-drawer mdui-color-grey-900" id="left-drawer">
+        <ul class="mdui-list">
+            <li class="mdui-list-item mdui-ripple">
+                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-cyan-a200">move_to_inbox</i>
+                <div class="mdui-list-item-content">Inbox</div>
+            </li>
+            <li class="mdui-list-item mdui-ripple">
+                <i class="mdui-list-item-icon mdui-icon material-icons">send</i>
+                <div class="mdui-list-item-content">Outbox</div>
+            </li>
+            <li class="mdui-list-item mdui-ripple">
+                <i class="mdui-list-item-icon mdui-icon material-icons">delete</i>
+                <div class="mdui-list-item-content">Trash</div>
+            </li>
+            <li class="mdui-list-item mdui-ripple">
+                <i class="mdui-list-item-icon mdui-icon material-icons">error</i>
+                <div class="mdui-list-item-content">Spam</div>
+            </li>
+        </ul>
+    </div>
+
 </body>
 
 
