--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomePage - Banson</title>
+    <script type="text/javascript">
+        function PageReload() {
+            window.location.reload()
+        }
+    </script>
 </head>
 
 
@@ -21,30 +26,34 @@
             </a>
             <a href="javascript:;" class="mdui-typo-title">HomePage</a>
             <div class="mdui-toolbar-spacer"></div>
-            <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">search</i></a>
-            <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">refresh</i></a>
-            <a href="javascript:;" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">more_vert</i></a>
+            <a href="javascript:;" class="mdui-btn mdui-btn-icon" mdui-tooltip="{content: '刷新'}" onclick="PageReload()">
+                <i class="mdui-icon material-icons">refresh</i>
+            </a>
         </div>
 
     </div>
 
     <div class="mdui-drawer mdui-color-grey-900" id="left-drawer">
         <ul class="mdui-list">
-            <li class="mdui-list-item mdui-ripple">
-                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-cyan-a200">move_to_inbox</i>
-                <div class="mdui-list-item-content">Inbox</div>
+            <li class="mdui-list-item mdui-ripple mdui-list-item-active">
+                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-cyan-a200">home</i>
+                <div class="mdui-list-item-content">主页</div>
             </li>
             <li class="mdui-list-item mdui-ripple">
-                <i class="mdui-list-item-icon mdui-icon material-icons">send</i>
-                <div class="mdui-list-item-content">Outbox</div>
+                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">person</i>
+                <div class="mdui-list-item-content">个人简介</div>
             </li>
             <li class="mdui-list-item mdui-ripple">
-                <i class="mdui-list-item-icon mdui-icon material-icons">delete</i>
-                <div class="mdui-list-item-content">Trash</div>
+                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">folder</i>
+                <div class="mdui-list-item-content">资料</div>
             </li>
             <li class="mdui-list-item mdui-ripple">
-                <i class="mdui-list-item-icon mdui-icon material-icons">error</i>
-                <div class="mdui-list-item-content">Spam</div>
+                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">local_cafe</i>
+                <div class="mdui-list-item-content">轻松一刻</div>
+            </li>
+            <li class="mdui-list-item mdui-ripple">
+                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">info</i>
+                <div class="mdui-list-item-content">关于</div>
             </li>
         </ul>
     </div>
