--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 
 
-<body
-    class="mdui-theme-primary-red mdui-theme-accent-blue-accent mdui-m-l-3 mdui-m-r-3 mdui-appbar-with-toolbar mdui-drawer-body-left mdui-theme-layout-dark">
+<body class="mdui-theme-primary-red mdui-theme-accent-blue-accent
+    mdui-m-l-3 mdui-m-r-3 mdui-appbar-with-toolbar mdui-drawer-body-left">
     <!-- mdui-theme-layout-dark-->
     <div class="mdui-appbar mdui-appbar-fixed">
         <div class="mdui-toolbar mdui-color-theme">
@@ -33,16 +33,16 @@
 
     </div>
 
-    <div class="mdui-drawer mdui-color-grey-900" id="left-drawer">
+    <div class="mdui-drawer" id="left-drawer">
         <ul class="mdui-list">
             <li class="mdui-list-item mdui-ripple mdui-list-item-active">
-                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-cyan-a200">home</i>
+                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-red">home</i>
                 <div class="mdui-list-item-content">主页</div>
             </li>
-            <li class="mdui-list-item mdui-ripple">
-                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">person</i>
+            <a href="./introduction/index.html" class="mdui-list-item mdui-ripple">
+                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue">person</i>
                 <div class="mdui-list-item-content">个人简介</div>
-            </li>
+            </a>
             <li class="mdui-list-item mdui-ripple">
                 <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">folder</i>
                 <div class="mdui-list-item-content">资料</div>
@@ -58,89 +58,19 @@
         </ul>
     </div>
 
-
-    <div class="mdui-container mdui-p-t-5">
-        <div class="mdui-row">
-            <div class="mdui-col-xs-6">
-                <div class="mdui-card">
-                    <!-- 卡片头部，包含头像、标题、副标题 -->
-                    <div class="mdui-card-header">
-                        <div class="mdui-card-header-title">Title</div>
-                        <div class="mdui-card-header-subtitle">Subtitle</div>
-                    </div>
-
-                    <!-- 卡片的媒体内容，可以包含图片、视频等媒体内容，以及标题、副标题 -->
-                    <div class="mdui-card-media">
-
-                        <!-- 卡片中可以包含一个或多个菜单按钮 -->
-                        <div class="mdui-card-menu">
-                            <button class="mdui-btn mdui-btn-icon mdui-text-color-white"><i
-                                    class="mdui-icon material-icons">share</i></button>
-                        </div>
-                    </div>
-
-                    <!-- 卡片的标题和副标题 -->
-                    <div class="mdui-card-primary">
-                        <div class="mdui-card-primary-title">Title</div>
-                        <div class="mdui-card-primary-subtitle">Subtitle</div>
-                    </div>
-
-                    <!-- 卡片的内容 -->
-                    <div class="mdui-card-content">子曰：「学而时习之，不亦说乎？有朋自远方来，不亦乐乎？人不知，而不愠，不亦君子乎？」</div>
-
-                    <!-- 卡片的按钮 -->
-                    <div class="mdui-card-actions">
-                        <button class="mdui-btn mdui-ripple">action 1</button>
-                        <button class="mdui-btn mdui-ripple">action 2</button>
-                        <button class="mdui-btn mdui-btn-icon mdui-float-right"><i
-                                class="mdui-icon material-icons">expand_more</i></button>
-                    </div>
-
-                </div>
-            </div>
-
-
-            <div class="mdui-col-xs-6">
-                <div class="mdui-card">
-                    <!-- 卡片头部，包含头像、标题、副标题 -->
-                    <div class="mdui-card-header">
-                        <img src="./img/good_thumb.jpg" class="mdui-card-header-avatar"/>
-                        <div class="mdui-card-header-title">Title</div>
-                        <div class="mdui-card-header-subtitle">Subtitle</div>
-                    </div>
-
-                    <!-- 卡片的媒体内容，可以包含图片、视频等媒体内容，以及标题、副标题 -->
-                    <div class="mdui-card-media">
-
-                        <!-- 卡片中可以包含一个或多个菜单按钮 -->
-                        <div class="mdui-card-menu">
-                            <button class="mdui-btn mdui-btn-icon mdui-text-color-white"><i
-                                    class="mdui-icon material-icons">share</i></button>
-                        </div>
-                    </div>
-
-                    <!-- 卡片的标题和副标题 -->
-                    <div class="mdui-card-primary">
-                        <div class="mdui-card-primary-title">Title</div>
-                        <div class="mdui-card-primary-subtitle">Subtitle</div>
-                    </div>
-
-                    <!-- 卡片的内容 -->
-                    <div class="mdui-card-content">子曰：「学而时习之，不亦说乎？有朋自远方来，不亦乐乎？人不知，而不愠，不亦君子乎？」</div>
-
-                    <!-- 卡片的按钮 -->
-                    <div class="mdui-card-actions">
-                        <button class="mdui-btn mdui-ripple">action 1</button>
-                        <button class="mdui-btn mdui-ripple">action 2</button>
-                        <button class="mdui-btn mdui-btn-icon mdui-float-right"><i
-                                class="mdui-icon material-icons">expand_more</i></button>
-                    </div>
-
-                </div>
+    <div class="mdui-color-theme-400">
+        <div class="mdui-container mdui-p-t-5">
+            <img class="mdui-img-circle mdui-img-fluid mdui-center" src="./img/good_thumb.jpg" />
+            <div class="mdui-typo-display-2 mdui-center mdui-text-center mdui-p-t-2git">
+                Oh, 这是我独享的 Moment!
             </div>
         </div>
     </div>
 
+    <footer>
+        <div class="mdui-container mdui-color-grey-800">
+        </div>
+    </footer>
 
 </body>
 
