--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 <body class="mdui-theme-primary-red mdui-theme-accent-blue-accent
-    mdui-m-l-3 mdui-m-r-3 mdui-appbar-with-toolbar mdui-drawer-body-left">
+     mdui-appbar-with-toolbar mdui-drawer-body-left">
     <!-- mdui-theme-layout-dark-->
     <div class="mdui-appbar mdui-appbar-fixed">
         <div class="mdui-toolbar mdui-color-theme">
@@ -58,19 +58,73 @@
         </ul>
     </div>
 
-    <div class="mdui-color-theme-400">
-        <div class="mdui-container mdui-p-t-5">
+    <div class="mdui-container-fluid">
+        <div class="mdui-p-t-4 mdui-color-theme-400"> </div>
+        <div class="mdui-color-theme-400">
             <img class="mdui-img-circle mdui-img-fluid mdui-center" src="./img/good_thumb.jpg" />
-            <div class="mdui-typo-display-2 mdui-center mdui-text-center mdui-p-t-2git">
-                Oh, 这是我独享的 Moment!
+            <div class="mdui-typo">
+                <div class="mdui-typo-display-2 mdui-center mdui-text-center mdui-p-t-2">
+                    Wow, 这是我独享的 Moment!
+                </div>
+            </div>
+        </div>
+        <div class="mdui-p-t-5 mdui-color-theme-400"> </div>
+    </div>
+
+
+
+    <div class="mdui-container-fluid mdui-m-t-2">
+        <div class="mdui-color-white">
+            <div class="mdui-col-xs-3">
+                <img class="mdui-img-circle" src="./img/github.jpg" />
+            </div>
+            <div class="mdui-col-xs-3">
+                <div class="mdui-typo">
+                    <a href="https://github.com/xzcxzcyy/">
+                        <div class="mdui-typo-headline">
+                            我的 GitHub 主页
+                        </div>
+                    </a>
+                </div>
+
+                <div class="mdui-typo-title">
+                    欢迎dalao来我的主页看看啊（虽然没啥好康的）
+                </div>
+            </div>
+
+            <div class="mdui-col-xs-3">
+                <img class="mdui-img-rounded" src="./img/blog_icon.jpg" />
+            </div>
+            <div class="mdui-col-xs-3">
+                <div class="mdui-typo">
+                    <a href="https://banson.blog.luogu.org/">
+                        <div class="mdui-typo-headline">
+                            我的 Blog
+                        </div>
+                    </a>
+                </div>
+
+                <div class="mdui-typo-title">
+                    也可以顺便康康我写的博客！
+                </div>
             </div>
         </div>
     </div>
 
-    <footer>
-        <div class="mdui-container mdui-color-grey-800">
+
+
+    <div class="mdui-container-fluid">
+        <div class="mdui-color-grey-800">
+            <div class="mdui-p-t-4 mdui-color-grey-800"> </div>
+            <div class="mdui-typo-body-1-opacity mdui-center mdui-text-center">
+                作者：徐梓晨
+                <p>Powered by<a href="https://mdui.org" class="mdui-text-color-pink-accent">MDUI</a></p>
+            </div>
+            <div class="mdui-p-t-2 mdui-color-grey-800"> </div>
         </div>
-    </footer>
+    </div>
+
+
 
 </body>
 
