reconstruct the directory and finish designing introduction Page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="./js/mdui.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HomePage - Banson</title>
+    <title>主页 - Banson</title>
     <script type="text/javascript">
         function PageReload() {
             window.location.reload()
@@ -24,7 +24,7 @@
             <a href="javascript:;" class="mdui-btn mdui-btn-icon" mdui-drawer="{target: '#left-drawer'}">
                 <i class="mdui-icon material-icons">menu</i>
             </a>
-            <a href="javascript:;" class="mdui-typo-title">HomePage</a>
+            <a href="javascript:;" class="mdui-typo-title">主页</a>
             <div class="mdui-toolbar-spacer"></div>
             <a href="javascript:;" class="mdui-btn mdui-btn-icon" mdui-tooltip="{content: '刷新'}" onclick="PageReload()">
                 <i class="mdui-icon material-icons">refresh</i>
