refine: homepage and introduction

--- a/index.html
+++ b/index.html
@@ -73,12 +73,13 @@
 
 
 
-    <div class="mdui-container-fluid mdui-m-t-2">
-        <div class="mdui-color-white">
-            <div class="mdui-col-xs-3">
-                <img class="mdui-img-circle" src="./img/github.jpg" />
+    <div class="mdui-container mdui-m-t-2">
+
+        <div class="mdui-row">
+            <div class="mdui-col-lg-3 mdui-col-xs-6">
+                <img class="mdui-img-fluid" src="./img/github.jpg" />
             </div>
-            <div class="mdui-col-xs-3">
+            <div class="mdui-col-lg-3 mdui-col-xs-6">
                 <div class="mdui-typo">
                     <a href="https://github.com/xzcxzcyy/">
                         <div class="mdui-typo-headline">
@@ -87,15 +88,15 @@
                     </a>
                 </div>
 
-                <div class="mdui-typo-title">
+                <p class="mdui-typo-title">
                     欢迎dalao来我的主页看看啊（虽然没啥好康的）
-                </div>
+                </p>
             </div>
 
-            <div class="mdui-col-xs-3">
-                <img class="mdui-img-rounded" src="./img/blog_icon.jpg" />
+            <div class="mdui-col-lg-3 mdui-col-xs-6">
+                <img class="mdui-img-fluid" src="./img/luogu.png" />
             </div>
-            <div class="mdui-col-xs-3">
+            <div class="mdui-col-lg-3 mdui-col-xs-6">
                 <div class="mdui-typo">
                     <a href="https://banson.blog.luogu.org/">
                         <div class="mdui-typo-headline">
@@ -104,11 +105,14 @@
                     </a>
                 </div>
 
-                <div class="mdui-typo-title">
+                <p class="mdui-typo-title">
                     也可以顺便康康我写的博客！
-                </div>
+                </p>
             </div>
         </div>
+        <div class="mdui-row"></div>
+
+
     </div>
 
 
