new: resources page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="javascript:;" class="mdui-btn mdui-btn-icon" mdui-drawer="{target: '#left-drawer'}">
                 <i class="mdui-icon material-icons">menu</i>
             </a>
-            <a href="javascript:;" class="mdui-typo-title">主页</a>
+            <a href="./index.html" class="mdui-typo-title">Banson's Site</a>
             <div class="mdui-toolbar-spacer"></div>
             <a href="javascript:;" class="mdui-btn mdui-btn-icon" mdui-tooltip="{content: '刷新'}" onclick="PageReload()">
                 <i class="mdui-icon material-icons">refresh</i>
@@ -40,13 +40,13 @@
                 <div class="mdui-list-item-content">主页</div>
             </li>
             <a href="./introduction/index.html" class="mdui-list-item mdui-ripple">
-                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue">person</i>
+                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">person</i>
                 <div class="mdui-list-item-content">个人简介</div>
             </a>
-            <li class="mdui-list-item mdui-ripple">
+            <a href="./resources/index.html" class="mdui-list-item mdui-ripple">
                 <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">folder</i>
-                <div class="mdui-list-item-content">资料</div>
-            </li>
+                <div class="mdui-list-item-content">工具</div>
+            </a>
             <li class="mdui-list-item mdui-ripple">
                 <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">local_cafe</i>
                 <div class="mdui-list-item-content">轻松一刻</div>
