--- a/introduction/index.html
+++ b/introduction/index.html
@@ -24,7 +24,7 @@
             <a href="javascript:;" class="mdui-btn mdui-btn-icon" mdui-drawer="{target: '#left-drawer'}">
                 <i class="mdui-icon material-icons">menu</i>
             </a>
-            <a href="javascript:;" class="mdui-typo-title">HomePage</a>
+            <a href="../index.html" class="mdui-typo-title">Banson's Site</a>
             <div class="mdui-toolbar-spacer"></div>
             <a href="javascript:;" class="mdui-btn mdui-btn-icon" mdui-tooltip="{content: '刷新'}" onclick="PageReload()">
                 <i class="mdui-icon material-icons">refresh</i>
@@ -36,17 +36,17 @@
     <div class="mdui-drawer" id="left-drawer">
         <ul class="mdui-list">
             <a href="../index.html" class="mdui-list-item mdui-ripple">
-                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue">home</i>
+                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">home</i>
                 <div class="mdui-list-item-content">主页</div>
             </a>
-            <a href="./index.html" class="mdui-list-item mdui-ripple mdui-list-item-active">
+            <li class="mdui-list-item mdui-ripple mdui-list-item-active">
                 <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-red">person</i>
                 <div class="mdui-list-item-content">个人简介</div>
-            </a>
-            <li class="mdui-list-item mdui-ripple">
-                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">folder</i>
-                <div class="mdui-list-item-content">资料</div>
             </li>
+            <a href="../resources/index.html" class="mdui-list-item mdui-ripple">
+                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">folder</i>
+                <div class="mdui-list-item-content">工具</div>
+            </a>
             <li class="mdui-list-item mdui-ripple">
                 <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">local_cafe</i>
                 <div class="mdui-list-item-content">轻松一刻</div>
