--- a/introduction/index.html
+++ b/introduction/index.html
@@ -47,10 +47,10 @@
                 <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">folder</i>
                 <div class="mdui-list-item-content">工具</div>
             </a>
-            <li class="mdui-list-item mdui-ripple">
+            <a href="../jokes/index.html" class="mdui-list-item mdui-ripple">
                 <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">local_cafe</i>
                 <div class="mdui-list-item-content">轻松一刻</div>
-            </li>
+            </a>
             <li class="mdui-list-item mdui-ripple">
                 <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">info</i>
                 <div class="mdui-list-item-content">关于</div>
