--- a/resources/index.html
+++ b/resources/index.html
@@ -47,10 +47,10 @@
                 <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-red">folder</i>
                 <div class="mdui-list-item-content">工具</div>
             </li>
-            <li class="mdui-list-item mdui-ripple">
+            <a href="../jokes/index.html" class="mdui-list-item mdui-ripple">
                 <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">local_cafe</i>
                 <div class="mdui-list-item-content">轻松一刻</div>
-            </li>
+            </a>
             <li class="mdui-list-item mdui-ripple">
                 <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">info</i>
                 <div class="mdui-list-item-content">关于</div>
@@ -69,7 +69,7 @@
                         <div class="mdui-card-primary-subtitle">无需下载安装，用完即走</div>
                     </div>
                     <!-- 卡片的媒体内容，可以包含图片、视频等媒体内容，以及标题、副标题 -->
-                    <div class="mdui-card-media mdui-m-t-1 mdui-m-b-1 mdui-m-l-1 mdui-r-2 mdui-ripple">
+                    <div class="mdui-card-media mdui-m-t-1 mdui-m-b-1 mdui-m-l-1 mdui-m-r-1 mdui-ripple">
                         <!--TODO: add photos here-->
                         <img src="./img/nicetool.jpg">
                     </div>
@@ -95,7 +95,7 @@
                         <div class="mdui-card-primary-subtitle">遇到了问题? 单走一个汇编！</div>
                     </div>
                     <!-- 卡片的媒体内容，可以包含图片、视频等媒体内容，以及标题、副标题 -->
-                    <div class="mdui-card-media mdui-m-t-1 mdui-m-b-1 mdui-m-l-1 mdui-r-2 mdui-ripple">
+                    <div class="mdui-card-media mdui-m-t-1 mdui-m-b-1 mdui-m-l-1 mdui-m-r-1 mdui-ripple">
                         <!--TODO: add photos here-->
                         <img src="./img/compiler_explorer.jpg">
                     </div>
@@ -121,7 +121,7 @@
                         <div class="mdui-card-primary-subtitle">想和朋友分享你的代码吗？</div>
                     </div>
                     <!-- 卡片的媒体内容，可以包含图片、视频等媒体内容，以及标题、副标题 -->
-                    <div class="mdui-card-media mdui-m-t-1 mdui-m-b-1 mdui-m-l-1 mdui-r-2 mdui-ripple">
+                    <div class="mdui-card-media mdui-m-t-1 mdui-m-b-1 mdui-m-l-1 mdui-m-r-1 mdui-ripple">
                         <!--TODO: add photos here-->
                         <img src="./img/ubuntu_pastebin.jpg">
                     </div>
