--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@
     <script src="../js/mdui.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>轻松一刻 - Banson</title>
+    <title>关于 - Banson</title>
     <script type="text/javascript">
         function PageReload() {
             window.location.reload()
@@ -45,14 +45,14 @@
                 <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">folder</i>
                 <div class="mdui-list-item-content">工具</div>
             </a>
-            <li class="mdui-list-item mdui-ripple mdui-list-item-active">
-                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-red">local_cafe</i>
+            <a href="../jokes/index.html" class="mdui-list-item mdui-ripple">
+                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">local_cafe</i>
                 <div class="mdui-list-item-content">轻松一刻</div>
-            </li>
-            <a href="../about/index.html" class="mdui-list-item mdui-ripple">
-                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">info</i>
-                <div class="mdui-list-item-content">关于</div>
             </a>
+            <li class="mdui-list-item mdui-ripple mdui-list-item-active">
+                <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-red">info</i>
+                <div class="mdui-list-item-content">关于</div>
+            </li>
         </ul>
     </div>
 
@@ -63,27 +63,17 @@
                 <div class="mdui-card mdui-m-t-2 mdui-m-b-2 mdui-shadow-5 mdui-hoverable">
                     <!-- 卡片的标题和副标题 -->
                     <div class="mdui-card-primary">
-                        <div class="mdui-card-primary-title">你能秒杀我？</div>
-                        <div class="mdui-card-primary-subtitle">都可以吃掉</div>
+                        <div class="mdui-card-primary-title">关于本项目</div>
                     </div>
 
                     <!-- 卡片的内容 -->
                     <div class="mdui-card-content">
                         <div class="mdui-typo">
                             <p>
-                                你们可能不知道只用20万赢到578万是什么概念。
+                                项目使用了<a href="https://mdui.org/">MDUI 框架</a>，在此致谢。
                             </p>
                             <p>
-                                我们一般只会用两个字来形容这种人：赌怪！
-                            </p>
-                            <p>
-                                我经常说一句话，当年陈刀仔他能用20块赢到3700万，我卢本伟用20万赢到500万不是问题。
-                            </p>
-                            <p>
-                                埋伏他一手，这个牌不能捡，这个牌不用捡，他死定了。反手给一个超级加倍，闷声发大财。他也超级加倍？但是不用怕，他赢不了我。五六七八九十，两个炸，很牛逼这个牌，如果把这个K换成J，我这个牌将绝杀，但是换不得。单走一个六，*～*，直接把K走了。
-                            </p>
-                            <p>
-                                走他一张2顶他。阿姨快点，阿姨，阿姨你K都不要吗？阿姨你快点啊！阿姨别磨磨蹭蹭的。五六七八九十。打错了，应该打2的。给阿姨倒杯茶好吧，阿姨给你倒一杯卡布奇诺。给阿姨倒一杯卡布奇诺！开始你的炸弹秀，炸他炸他。漂亮！十七张牌你能秒我？你能秒杀我？！你今天能十七张牌把卢本伟秒了，我！当！场！就把这个电脑屏幕吃掉！
+                                作者：徐梓晨。部分权利保留。
                             </p>
                         </div>
                     </div>
@@ -96,12 +86,60 @@
                 <div class="mdui-card mdui-m-t-2 mdui-m-b-2 mdui-shadow-5 mdui-hoverable">
                     <!-- 卡片的标题和副标题 -->
                     <div class="mdui-card-primary">
-                        <div class="mdui-card-primary-title">我觉得这里不需要文字说明</div>
-                        <div class="mdui-card-primary-subtitle">2333</div>
+                        <div class="mdui-card-primary-title">关于作者</div>
                     </div>
-                    <!-- 卡片的媒体内容，可以包含图片、视频等媒体内容，以及标题、副标题 -->
-                    <div class="mdui-card-media mdui-m-t-1 mdui-m-b-1 mdui-m-l-1 mdui-m-r-1 mdui-ripple">
-                        <img src="./img/Greta.jpg">
+
+                    <!-- 卡片的内容 -->
+                    <div class="mdui-card-content">
+
+                        <div class="mdui-row">
+                            <div class="mdui-col-xs-2">
+                                <img src="./img/github_photo.jpg" class="mdui-img mdui-img-fluid" />
+                            </div>
+                            <div class="mdui-col-xs-10">
+                                <div class="mdui-typo">
+                                    <p>
+                                        Github 主页：<a href="https://github.com/xzcxzcyy/">点击这里</a>
+                                    </p>
+                                    <p>
+                                        Xu Zichen, School Of Computer Science & Technology, HUST, Wuhan, China
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="mdui-row">
+            <div class="mdui-col-xs-11 mdui-col-offset-xs-1">
+                <div class="mdui-card mdui-m-t-2 mdui-m-b-2 mdui-shadow-5 mdui-hoverable">
+                    <!-- 卡片的标题和副标题 -->
+                    <div class="mdui-card-primary">
+                        <div class="mdui-card-primary-title">寝室主页</div>
+                    </div>
+
+                    <!-- 卡片的内容 -->
+                    <div class="mdui-card-content">
+
+                        <div class="mdui-row">
+                            <div class="mdui-col-xs-2">
+                                <img src="./img/gu_gu_gu.jpg" class="mdui-img mdui-img-fluid" />
+                            </div>
+                            <div class="mdui-col-xs-10">
+                                <div class="mdui-typo">
+                                    <p>
+                                        <a href="http://margatroid.gitee.io/dorm-421/#/">
+                                            欢迎来到421寝<del>(鸽)</del>室<del>(笼)</del>
+                                        </a>
+                                    </p>
+                                    <p>
+                                        <del>不会咕咕咕的，马上就做完了！！！</del>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
