--- a/resources/index.html
+++ b/resources/index.html
@@ -51,10 +51,10 @@
                 <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">local_cafe</i>
                 <div class="mdui-list-item-content">轻松一刻</div>
             </a>
-            <li class="mdui-list-item mdui-ripple">
+            <a href="../about/index.html" class="mdui-list-item mdui-ripple">
                 <i class="mdui-list-item-icon mdui-icon material-icons mdui-text-color-blue-a200">info</i>
                 <div class="mdui-list-item-content">关于</div>
-            </li>
+            </a>
         </ul>
     </div>
 
