--- a/index.html
+++ b/index.html
@@ -58,23 +58,18 @@
         </ul>
     </div>
 
-    <div class="mdui-container-fluid">
-        <div class="mdui-p-t-4 mdui-color-theme-400"> </div>
-        <div class="mdui-color-theme-400">
-            <img class="mdui-img-circle mdui-img-fluid mdui-center" src="./img/good_thumb.jpg" />
-            <div class="mdui-typo">
-                <div class="mdui-typo-display-2 mdui-center mdui-text-center mdui-p-t-2">
-                    Wow, 这是我独享的 Moment!
-                </div>
+    <div class="mdui-p-t-4 mdui-color-theme-400"> </div>
+    <div class="mdui-color-theme-400">
+        <img class="mdui-img-circle mdui-img-fluid mdui-center" src="./img/good_thumb.jpg" />
+        <div class="mdui-typo">
+            <div class="mdui-typo-display-2 mdui-center mdui-text-center mdui-p-t-2">
+                Wow, 这是我独享的 Moment!
             </div>
         </div>
-        <div class="mdui-p-t-5 mdui-color-theme-400"> </div>
     </div>
+    <div class="mdui-p-t-5 mdui-color-theme-400"> </div>
 
-
-
-    <div class="mdui-container mdui-m-t-2">
-
+    <div class="mdui-container-fluid mdui-m-t-2">
         <div class="mdui-row">
             <div class="mdui-col-lg-3 mdui-col-xs-6">
                 <img class="mdui-img-fluid" src="./img/github.jpg" />
@@ -111,24 +106,17 @@
             </div>
         </div>
         <div class="mdui-row"></div>
-
-
     </div>
+    <div style="height: 100px"> </div>
 
-
-
-    <div class="mdui-container-fluid">
-        <div class="mdui-color-grey-800">
-            <div class="mdui-p-t-4 mdui-color-grey-800"> </div>
-            <div class="mdui-typo-body-1-opacity mdui-center mdui-text-center">
-                作者：徐梓晨
-                <p>Powered by<a href="https://mdui.org" class="mdui-text-color-pink-accent">MDUI</a></p>
-            </div>
-            <div class="mdui-p-t-2 mdui-color-grey-800"> </div>
+    <div class="mdui-color-grey-800">
+        <div class="mdui-p-t-4 mdui-color-grey-800"> </div>
+        <div class="mdui-typo-body-1-opacity mdui-center mdui-text-center">
+            作者：徐梓晨
+            <p>Powered by<a href="https://mdui.org" class="mdui-text-color-pink-accent">MDUI</a></p>
         </div>
+        <div style="height: 100px" class="mdui-color-grey-800"> </div>
     </div>
-
-
 
 </body>
 
