hotfix: perf on portable device

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
     </div>
     <div class="mdui-p-t-5 mdui-color-theme-400"> </div>
 
-    <div class="mdui-container-fluid mdui-m-t-2">
+    <div class="mdui-container mdui-m-t-2">
         <div class="mdui-row">
-            <div class="mdui-col-lg-3 mdui-col-xs-6">
+            <div class="mdui-col-lg-3 mdui-col-xs-2">
                 <img class="mdui-img-fluid" src="./img/github.jpg" />
             </div>
-            <div class="mdui-col-lg-3 mdui-col-xs-6">
+            <div class="mdui-col-lg-3 mdui-col-xs-10">
                 <div class="mdui-typo">
                     <a href="https://github.com/xzcxzcyy/">
                         <div class="mdui-typo-headline">
@@ -88,10 +88,10 @@
                 </p>
             </div>
 
-            <div class="mdui-col-lg-3 mdui-col-xs-6">
+            <div class="mdui-col-lg-3 mdui-col-xs-2">
                 <img class="mdui-img-fluid" src="./img/luogu.png" />
             </div>
-            <div class="mdui-col-lg-3 mdui-col-xs-6">
+            <div class="mdui-col-lg-3 mdui-col-xs-10">
                 <div class="mdui-typo">
                     <a href="https://banson.blog.luogu.org/">
                         <div class="mdui-typo-headline">
@@ -105,7 +105,6 @@
                 </p>
             </div>
         </div>
-        <div class="mdui-row"></div>
     </div>
     <div style="height: 100px"> </div>
 
