--- a/introduction/index.html
+++ b/introduction/index.html
@@ -61,7 +61,7 @@
 
     <div class="mdui-container mdui-p-t-5 mdui-p-b-5">
         <div class="mdui-row">
-            <div class="mdui-col-xs-6">
+            <div class="mdui-col-lg-6 mdui-col-xs-12">
                 <div class="mdui-card mdui-ripple mdui-m-t-2 mdui-m-b-2">
                     <!-- 卡片头部，包含头像、标题、副标题 -->
                     <div class="mdui-card-header">
@@ -112,7 +112,7 @@
             </div>
 
 
-            <div class="mdui-col-xs-6">
+            <div class="mdui-col-lg-6 mdui-col-xs-12">
                 <div class="mdui-card mdui-ripple mdui-m-t-2 mdui-m-b-2">
                     <!-- 卡片头部，包含头像、标题、副标题 -->
                     <div class="mdui-card-header">
