modify: change dom description

--- a/about/index.html
+++ b/about/index.html
@@ -131,7 +131,7 @@
                                 <div class="mdui-typo">
                                     <p>
                                         <a href="http://margatroid.gitee.io/dorm-421/#/">
-                                            欢迎来到421寝<del>(鸽)</del>室<del>(笼)</del>
+                                            欢迎来到421寝<del>(鸽)</del>室<del>(巢)</del>
                                         </a>
                                     </p>
                                     <p>
